pizze bianche added

--- a/index.html
+++ b/index.html
@@ -283,15 +283,16 @@
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>MARINARA</p>
+                           <p>MIMOSA</p>
                            <div class="ingredients">
                               <p>
-                                 POMODORO, ORIGANO, AGLIO, BASILICO, OLIO EVO
+                                 FIOR DI LATTE, PANNA, PROSCIUTTO COTTO, MAIS,
+                                 BASILICO
                               </p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>4.00 €</p>
+                           <p>6.00 €</p>
                         </div>
                      </div>
                   </div>
@@ -299,13 +300,15 @@
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>COSACCA</p>
+                           <p>PRIMAVERA</p>
                            <div class="ingredients">
-                              <p>POMODORO, GRANA, BASILICO, OLIO EVO</p>
+                              <p>
+                                 FIOR DI LATTE, POMODORINI, BASILICO, OLIO EVO
+                              </p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>4.50 €</p>
+                           <p>6.50 €</p>
                         </div>
                      </div>
                   </div>
@@ -313,13 +316,16 @@
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>MARGHERITA</p>
+                           <p>4 FORMAGGI</p>
                            <div class="ingredients">
-                              <p>POMODORO,FIOR DI LATTE, BASILICO, OLIO EVO</p>
+                              <p>
+                                 GORGONZOLA, FIOR DI LATTE, FONTINA, EMMENTAL,
+                                 BASILICO
+                              </p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>5.00 €</p>
+                           <p>8.00 €</p>
                         </div>
                      </div>
                   </div>
@@ -327,9 +333,22 @@
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>DIAVOLA</p>
+                           <p>INVERNO</p>
                            <div class="ingredients">
-                              <p>POMODORO, FIOR DI LATTE, SALAME PICCANTE</p>
+                              <p>FIOR DI LATTE, SALSICCIA, FRIARIELLI</p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>7.00 €</p>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>VIENNESE</p>
+                           <div class="ingredients">
+                              <p>FIOR DI LATTE, WURSTEL, PATATINE</p>
                            </div>
                         </div>
                         <div class="price">
@@ -340,27 +359,28 @@
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>SICILIANA</p>
+                           <p>NERANO</p>
                            <div class="ingredients">
                               <p>
-                                 POMODORO, FIOR DI LATTE, MELANZANE, BASILICO,
-                                 OLI EVO
+                                 FIOR DI LATTE, ZUCCHINE, GRANA, BASILICO, OLIO
+                                 EVO
                               </p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>6.50 €</p>
+                           <p>7.00 €</p>
                         </div>
                      </div>
                   </div>
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>NAPOLETANA</p>
+                           <p>PISTACCHIOSA</p>
                            <div class="ingredients">
                               <p>
-                                 POMODORO, MOZZARELLA DI BUFALA, BASILICO,
-                                 SCAGLIE DI GRANA, OLIO EVO
+                                 FIOR DI LATTE, PESTO DI PISTACCHIO, MORTADELLA,
+                                 GRANELLA DI PISTACCHIO, STRACCIATELLA DI
+                                 BURRATA, BASILICO
                               </p>
                            </div>
                         </div>
@@ -372,43 +392,25 @@
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>ORTOLANA</p>
+                           <p>RIPIENO</p>
                            <div class="ingredients">
                               <p>
-                                 POMODORO, FIOR DI LATTE, PEPERONI, MELANZANE,
-                                 FUNGHI, ZUCCHINE, FRIARIELLI
+                                 POMODORO, RICOTTA, SALAME, FIOR DI LATTE, OLIO
+                                 EVO, BASILICO
                               </p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>7.50 €</p>
+                           <p>7.00 €</p>
                         </div>
                      </div>
                   </div>
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>CAPRICCIOSA</p>
+                           <p>4 STAGIONI</p>
                            <div class="ingredients">
-                              <p>
-                                 POMODORO, FUNGHI, PROSCIUTTO, SALAME, OLIVE,
-                                 CARCIOFINI, FIOR DI LATTE, BASILICO, OLIO EVO
-                              </p>
-                           </div>
-                        </div>
-                        <div class="price">
-                           <p>7.50 €</p>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="menu-listing">
-                     <div class="menu-item">
-                        <div class="name">
-                           <p>PROSCIUTTO E FUNGHI</p>
-                           <div class="ingredients">
-                              <p>
-                                 POMODORO, FIOR DI LATTE, PROSCIUTTO E FUNGHI
-                              </p>
+                              <p>POMODORO, MOZZARELLA, PROSCIUTTO, SALAMINO</p>
                            </div>
                         </div>
                         <div class="price">
@@ -419,31 +421,28 @@
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>TONNO E CIPOLLA</p>
+                           <p>BRESAOLA</p>
                            <div class="ingredients">
                               <p>
-                                 POMODORO, TONNO, POMODORINI, CIPOLLA, BASILICO,
-                                 OLIO EVO, SCORZA DI LIMONE
+                                 POMODORO, MOZZARELLA, BRESAOLA, RUCOLA, GRANA
                               </p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>7.00 €</p>
+                           <p>8.00 €</p>
                         </div>
                      </div>
                   </div>
                   <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
-                           <p>ESTATE</p>
+                           <p>WURSTEL</p>
                            <div class="ingredients">
-                              <p>
-                                 POMODORO, CRUDO, BURRATA, BASILICO, OLIO EVO
-                              </p>
+                              <p>POMODORO, MOZZARELLA, WURSTEL</p>
                            </div>
                         </div>
                         <div class="price">
-                           <p>7.00 €</p>
+                           <p>6.00 €</p>
                         </div>
                      </div>
                   </div>
