food menu added to the object, menu drinks remains yet. on the renders all the data inside the object. before implementing buttons

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
          </div>
       </header>
       <main>
+         <!-- ******************** Pizze ********************* -->
          <div id="pizza" class="container container-sri_lankan">
             <div class="secondary-title">
                <h2>Pizza Menu</h2>
@@ -98,6 +99,21 @@
                   <div class="third-title">
                      <h3>LE CLASSICHE</h3>
                   </div>
+
+                  <!-- this is how it looks an item, ingredient and price is rendered in html format -->
+                  <!-- <div class="menu-listing">
+                     <div class="menu-item">
+                        <div class="name">
+                           <p>Special Rice</p>
+                           <div class="ingredients">
+                              <p></p>
+                           </div>
+                        </div>
+                        <div class="price">
+                           <p>25.00 €</p>
+                        </div>
+                     </div>
+                  </div> -->
                </div>
                <div class="menu-img">
                   <img
@@ -122,6 +138,7 @@
                </div>
             </div>
          </div>
+
          <!-- ******************** Sri Lankan ********************* -->
          <div id="sri-lankan" class="container container-sri_lankan">
             <div class="secondary-title">
@@ -137,6 +154,7 @@
                      <h3>FRIED RICE</h3>
                   </div>
 
+                  <!-- this is how it looks an item, ingredient and price is rendered in html format -->
                   <!-- <div class="menu-listing">
                      <div class="menu-item">
                         <div class="name">
@@ -233,6 +251,100 @@
                <div class="menu-items">
                   <div class="third-title">
                      <h3>DEVILLED</h3>
+                  </div>
+               </div>
+               <div class="menu-img">
+                  <img
+                     src="./assets/img/fried-rice.png"
+                     alt="image-of-fried-rice"
+                  />
+               </div>
+            </div>
+            <!-- stew -->
+            <div id="stew" class="container-menu">
+               <div class="menu-items">
+                  <div class="third-title">
+                     <h3>STEW</h3>
+                  </div>
+               </div>
+               <div class="menu-img">
+                  <img
+                     src="./assets/img/fried-rice.png"
+                     alt="image-of-fried-rice"
+                  />
+               </div>
+            </div>
+            <!-- short eats -->
+            <div id="short_eats" class="container-menu">
+               <div class="menu-items">
+                  <div class="third-title">
+                     <h3>SHORT EATS</h3>
+                  </div>
+               </div>
+               <div class="menu-img">
+                  <img
+                     src="./assets/img/fried-rice.png"
+                     alt="image-of-fried-rice"
+                  />
+               </div>
+            </div>
+         </div>
+
+         <!-- ******************** Dessert ********************* -->
+         <div id="dessert-main" class="container container-desert">
+            <div class="secondary-title">
+               <h2>Dessert</h2>
+            </div>
+
+            <!-- dessert -->
+            <div id="dessert" class="container-menu">
+               <div class="menu-items">
+                  <div class="third-title">
+                     <h3>DESSERT</h3>
+                  </div>
+               </div>
+               <div class="menu-img">
+                  <img
+                     src="./assets/img/fried-rice.png"
+                     alt="image-of-fried-rice"
+                  />
+               </div>
+            </div>
+         </div>
+
+         <!-- ******************** Ice cream ********************* -->
+         <div id="ice_cream-main" class="container container-desert">
+            <div class="secondary-title">
+               <h2>Ice Cream</h2>
+            </div>
+
+            <!-- ice cream -->
+            <div id="ice_cream" class="container-menu">
+               <div class="menu-items">
+                  <div class="third-title">
+                     <h3>ICE CREAM</h3>
+                  </div>
+               </div>
+               <div class="menu-img">
+                  <img
+                     src="./assets/img/fried-rice.png"
+                     alt="image-of-fried-rice"
+                  />
+               </div>
+            </div>
+         </div>
+
+         <!-- ******************** Frutta ********************* -->
+         <div id="frutta-main" class="container container-desert">
+            <div class="secondary-title">
+               <h2>Frutta</h2>
+            </div>
+
+            <!-- frutta -->
+            <div id="frutta" class="container-menu">
+               <div class="menu-items">
+                  <div class="third-title">
+                     <h3>FRUTTA</h3>
                   </div>
                </div>
                <div class="menu-img">
